--- a/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="User" asp-action="GetAll">Users</a>
                             </li>
+                            @if (roleClaim == "Admin")
+                            {
+                                <li class="nav-item">
+                                    <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="AdminPannel">Admin Pannel</a>
+                                </li>
+                            }
                         </ul>
                     }
                     else @if (auth && roleClaim != "Volunteer")
