--- a/MilitaryProject/MilitaryProject/Views/User/ChangeRole.cshtml
+++ b/MilitaryProject/MilitaryProject/Views/User/ChangeRole.cshtml
@@ -1,4 +1,5 @@
 ﻿﻿@using MilitaryProject.Domain.Entity
+@using MilitaryProject.Domain.Enum
 @using MilitaryProject.Domain.ViewModels.User
 @model User
 
@@ -16,7 +17,12 @@
                         <input type="hidden" asp-for="Email" />
                         <div class="form-group">
                             <label asp-for="Role">Role:</label>
-                            <input asp-for="Role" class="form-control" />
+                            <select asp-for="Role" class="form-control">
+                                @foreach (var type in Enum.GetValues(typeof(Role)))
+                                {
+                                    <option value="@type">@type</option>
+                                }
+                            </select>
                             <span asp-validation-for="Role" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-primary mt-3">Change</button>
